--- a/dashboard-demo.html
+++ b/dashboard-demo.html
@@ -135,6 +135,10 @@
                 </li>
             </ul>
 
+            <button class="mobile-menu-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
             <div class="nav-actions">
                 <!-- Language Toggle -->
                 <button id="lang-toggle" class="lang-switch">
@@ -165,6 +169,9 @@
             </div>
         </div>
     </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
 
     <div class="container" style="padding-top: 24px; padding-bottom: 48px;">
         <!-- Breadcrumb -->
