--- a/error-pages.html
+++ b/error-pages.html
@@ -98,6 +98,10 @@
                 </li>
             </ul>
 
+            <button class="mobile-menu-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
             <div class="nav-actions">
                 <!-- Language Toggle -->
                 <button id="lang-toggle" class="lang-switch">
@@ -128,6 +132,9 @@
             </div>
         </div>
     </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
 
     <!-- Error Page Selector -->
     <div
