--- a/figma-docs.html
+++ b/figma-docs.html
@@ -219,6 +219,10 @@
                 </li>
             </ul>
 
+            <button class="mobile-menu-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
             <div class="nav-actions">
                 <!-- Language Toggle -->
                 <button id="lang-toggle" class="lang-switch">
@@ -249,6 +253,9 @@
             </div>
         </div>
     </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
 
     <div class="container docs-container">
         <!-- Header -->
