--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         </li>
       </ul>
 
+      <button class="mobile-menu-toggle">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+
       <div class="nav-actions">
         <!-- Language Toggle -->
         <button id="lang-toggle" class="lang-switch">
@@ -78,6 +82,9 @@
       </div>
     </div>
   </nav>
+
+  <!-- Mobile Menu Overlay -->
+  <div class="mobile-menu-overlay"></div>
 
   <div
     style="background: linear-gradient(135deg, var(--color-primary-900) 0%, var(--color-primary-800) 100%); color: white; padding: 80px 0;">
