--- a/login.html
+++ b/login.html
@@ -114,6 +114,10 @@
                 </li>
             </ul>
 
+            <button class="mobile-menu-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
             <div class="nav-actions">
                 <!-- Language Toggle -->
                 <button id="lang-toggle" class="lang-switch">
@@ -144,6 +148,9 @@
             </div>
         </div>
     </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
 
     <div class="login-container">
         <div class="login-card">
