--- a/signup.html
+++ b/signup.html
@@ -109,8 +109,14 @@
                     </a>
                 </li>
             </ul>
+            <button class="mobile-menu-toggle" style="margin-left: auto;">
+                <i class="fa-solid fa-bars"></i>
+            </button>
         </div>
     </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
 
     <div class="signup-container">
         <div class="signup-card">
