--- a/data-table-crud.html
+++ b/data-table-crud.html
@@ -66,6 +66,10 @@
                 </li>
             </ul>
 
+            <button class="mobile-menu-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
             <div class="nav-actions">
                 <!-- Language Toggle -->
                 <button id="lang-toggle" class="lang-switch">
@@ -96,6 +100,9 @@
             </div>
         </div>
     </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
 
     <div class="container" style="padding-top: 24px; padding-bottom: 48px;">
         <h1 class="mb-2">Patient Records Management</h1>
