--- a/settings.html
+++ b/settings.html
@@ -51,6 +51,10 @@
                 </li>
             </ul>
 
+            <button class="mobile-menu-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
             <div class="nav-actions">
                 <!-- Language Toggle -->
                 <button id="lang-toggle" class="lang-switch">
@@ -81,6 +85,9 @@
             </div>
         </div>
     </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay"></div>
 
     <div class="container" style="padding-top: 24px; padding-bottom: 48px;">
         <h1 class="mb-6">Account Settings</h1>
